--- a/gallery-single.html
+++ b/gallery-single.html
@@ -60,8 +60,8 @@
 				<ul class="main-menu">
 					<li><a href="./home.html">Home</a></li>
 					<li><a href="./gallery.html">Gallery</a></li>
-					<li class="active"><a href="./gallery-single.html">Single gallery</a></li>
-					<li><a href="./blog.html">Blog</a></li>
+					<li class="active"><a href="./gallery-single.html">Posts</a></li>
+					<li><a href="./blog.html">News Feed</a></li>
 					<li><a href="./contact.html">Contact</a></li>
 				</ul>
 				<div class="social-links-warp">
@@ -92,15 +92,9 @@
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-text">
 							<span>Photography</span>
-							<h2>Puppy Eyes</h2>
-							<ul>
-								<li><span>Client:</span>Company Name</li>
-								<li><span>Date:</span>August 25, 2018</li>
-								<li><span>Categorie:</span>Animal Photography</li>
-								<li><span>Tags:</span>animals, dogs, photography</li>
-							</ul>
-							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices. Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
-							<p>Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et malesua-da fames ac ante ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis nulla. Fusce quis tempor risus, non elemen tum dui. Curabitur et mattis ex, a ultrices.</p>
+							<h2>Gran Vía</h2>
+							<p>The Gran Via is a hustling and bustling part of Madrid‘s city center, with no shortage of interesting and exciting things to do and see.</p>
+							<p>There is no shortage of events at Madrid’s Gran Vía, which is known as the city’s very own Broadway. Watch the Lion King, the Cirque du Soleil, Les Miserables, flamenco, a stand-up comedy performance, ballet or great Spanish plays at one of the many venues on and around the Gran Vía. For stand-up comedy, La Chocita del Loro is one of the best venues.</p>
 						</div>
 					</div>
 				</div>
