--- a/gallery-single.html
+++ b/gallery-single.html
@@ -86,7 +86,7 @@
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-slider owl-carousel">
 							<img src="img/gallery-single/1.jpg" alt="">
-							<img src="img/gallery-single/2.jpg" alt="">
+							<img src="img/gallery-single/2.png" alt="">
 						</div>
 					</div>
 					<div class="col-xl-6 p-0">
