Cambios del cover, nuevo repositorio

--- a/Photoblog.html
+++ b/Photoblog.html
@@ -13,10 +13,12 @@
 </head>
 
 <body class="text-center">
+        <div class="background">
+                <div class="image"></div>
+            </div>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand">Cover</h3>
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link active" href="#">Home</a>
                     <a class="nav-link active" href="#">Posts</a>
@@ -25,21 +27,21 @@
                     <a class="nav-link active" href="#">Contact</a>
                 </nav>
             </div>
+            
+
         </header>
 
-        <main role="main" class="inner cover">
-            <h1 class="cover-heading">Home page</h1>
-            <p class="lead">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        <main role="main" class="inner_cover">
+            <h1 class="cover-heading">We don't know how to call our blog >O</h1>
+            <p class="text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             </p>
             <p class="lead">
                 <a href="#" class="btn btn-lg btn-secondary">More info</a>
             </p>
         </main>
             <br>
-            <br>
-            <br>
-            <br>
+            
         <footer class="mastfoot mt-auto">
             <div class="inner"></div>
             <p class="name">Grupo</p><a href="#">WildCodeSchool</a></p>
