--- a/AboutUs_Contact.html
+++ b/AboutUs_Contact.html
@@ -11,12 +11,19 @@
     </head>
 
     <body>
-        <header>
+
+        <header class="masthead mb-auto">
+            <div class="inner">
+                <nav class="nav nav-masthead justify-content-center">
+                    <a class="nav-link active" href="Photoblog.html">Home</a>
+                    <a class="nav-link active" href="#">Posts</a>
+                    <a class="nav-link active" href="#">News Feed</a>
+                    <a class="nav-link active" href="#">About us</a>
+                    <a class="nav-link active" href="#contact">Contact</a>
+                </nav>
+            </div> 
             <h2>About Me</h2>
         </header>
-
-        <nav>
-        </nav>
 
     <!-- About Us, presentación-->
         <section class="row featurette">
@@ -31,7 +38,7 @@
         </section>
 
     <!-- Contact-->
-        <section class="row">
+        <section id="contact" class="row">
             <div class="col-md-7">
                 <form>
                     <h2>Contact</h2>
