--- a/Photoblog.html
+++ b/Photoblog.html
@@ -23,8 +23,8 @@
                     <a class="nav-link active" href="#">Home</a>
                     <a class="nav-link active" href="#">Posts</a>
                     <a class="nav-link active" href="#">News Feed</a>
-                    <a class="nav-link active" href="#">About us</a>
-                    <a class="nav-link active" href="#">Contact</a>
+                    <a class="nav-link active" href="AboutUs_Contact.html">About us</a>
+                    <a class="nav-link active" href="AboutUs_Contact.html#contact">Contact</a>
                 </nav>
             </div>
             
