--- a/AboutUs_Contact.html
+++ b/AboutUs_Contact.html
@@ -16,7 +16,7 @@
             <div class="inner">
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link active" href="Photoblog.html">Home</a>
-                    <a class="nav-link active" href="#">Posts</a>
+                    <a class="nav-link active" href="index1.html">Posts</a>
                     <a class="nav-link active" href="#">News Feed</a>
                     <a class="nav-link active" href="#">About us</a>
                     <a class="nav-link active" href="#contact">Contact</a>
