borrado de hojas css

--- a/AboutUs_Contact.html
+++ b/AboutUs_Contact.html
@@ -3,20 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Page Title</title>
+        <title>AboutUs_Contact PhotoBlogMadrid WCS</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href= "css/AboutUs_Contact.css">
-        <script src="main.js"></script>
+        <link rel="stylesheet" href= "css/final.css">
     </head>
 
     <body>
 
         <header class="masthead mb-auto">
             <div class="inner">
-                <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link active" href="Photoblog.html">Home</a>
-                    <a class="nav-link active" href="index1.html">Posts</a>
+                <nav class="nav nav-masthead">
+                    <a class="nav-link active" href="index_photoblog.html">Home</a>
+                    <a class="nav-link active" href="posts.html">Posts</a>
                     <a class="nav-link active" href="#">News Feed</a>
                     <a class="nav-link active" href="#">About us</a>
                     <a class="nav-link active" href="#contact">Contact</a>
