--- a/posts.html
+++ b/posts.html
@@ -15,7 +15,7 @@
       <nav class="nav nav-masthead">
         <a class="nav-link active" href="index_photoblog.html">Home</a>
         <a class="nav-link active" href="#">Posts</a>
-        <a class="nav-link active" href="#">News Feed</a>
+        <a class="nav-link active" href="newsfeed.html">News Feed</a>
         <a class="nav-link active" href="aboutus_contact.html">About us</a>
         <a class="nav-link active" href="aboutus_contact.html#contact">Contact</a>
       </nav>
