--- a/AboutUs_Contact.html
+++ b/AboutUs_Contact.html
@@ -12,11 +12,11 @@
     <body>
 
         <header class="masthead mb-auto">
-            <div class="inner">
+            <div class="masthead">
                 <nav class="nav nav-masthead">
                     <a class="nav-link active" href="index_photoblog.html">Home</a>
                     <a class="nav-link active" href="posts.html">Posts</a>
-                    <a class="nav-link active" href="#">News Feed</a>
+                    <a class="nav-link active" href="newsfeed.html">News Feed</a>
                     <a class="nav-link active" href="#">About us</a>
                     <a class="nav-link active" href="#contact">Contact</a>
                 </nav>
