--- a/index_photoblog.html
+++ b/index_photoblog.html
@@ -22,7 +22,7 @@
                 <nav class="nav nav-masthead">
                     <a class="nav-link active" href="#">Home</a>
                     <a class="nav-link active" href="posts.html">Posts</a>
-                    <a class="nav-link active" href="#">News Feed</a>
+                    <a class="nav-link active" href="newsfeed.html">News Feed</a>
                     <a class="nav-link active" href="aboutus_contact.html">About us</a>
                     <a class="nav-link active" href="aboutus_contact.html#contact">Contact</a>
                 </nav>
