--- a/index_photoblog.html
+++ b/index_photoblog.html
@@ -31,12 +31,12 @@
         </header>
 
         <main role="main" class="inner_cover">
-            <h1 class="cover-heading">We don't know how to call our blog >O</h1>
+            <h1 class="cover-heading">Secrets of Madrid:<br>a PhotoBlog by Wildo Coda</h1>
             <p class="text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Here are some of the basics you need to know before coming to Madrid!
             </p>
             <p class="lead text-center">
-                <a href="#" class="btn btn-lg btn-secondary">More info</a>
+                <a href="posts.html" class="btn btn-lg btn-secondary">See our posts</a>
             </p>
         </main>
             <br>
