--- a/posts.html
+++ b/posts.html
@@ -86,10 +86,17 @@
             </div>
       </div>
     </div>
-   
-
     
-  
+    <footer class="footer">
+        <a href="http://twitter.com/AQUI_TU_USUARIO" target="_blank"><img src="https://lh6.googleusercontent.com/--aIk2uBwEKM/T3nN1x09jBI/AAAAAAAAAs8/qzDsbw3kEm8/s32/twitter32.png" width=32 height=32 alt="Follow us on Twitter" /></a>
+        <a href="http://www.facebook.com/AQUI_TU_PAGINA" target="_blank"><img alt="Follow us on  Facebook" src="https://lh6.googleusercontent.com/-CYt37hfDnQ8/T3nNydojf_I/AAAAAAAAAr0/P5OtlZxV4rk/s32/facebook32.png" width=32 height=32  /></a>
+        <a href="URL_DE_TU_CANAL_YOUTUBE" target="_blank"><img alt="Subscribe on YouTube" src="https://lh5.googleusercontent.com/-TXzlKCbKzWs/T6mYkDhTXyI/AAAAAAAAA1U/vm95Q2KwrYg/s32/youtube32.png" width=32 height=32  /></a>
+        <a href="URL_DE_TU_BLOG_TUMBLR" target="_blank"><img alt="Siguenos en Tumblr" src="https://lh3.googleusercontent.com/-rLA4XAhk6OM/T7YDzA-IqcI/AAAAAAAAA4I/b5-1aH8CnOg/s32/tumblr32.png" width=32 height=32  /></a>
+        <a href="URL_DE_TU_PERFIL_INSTAGRAM" target="_blank"><img alt="Follow us on Instagram" src="https://lh5.googleusercontent.com/-vBqtz2iv2BE/UIqE3LQyFMI/AAAAAAAABgA/TJ4W-vIBjsc/s32/instagram32.png" width=32 height=32  /></a> <br>
+        <p class="float-right"><a href="#">Back to top</a></p> <br>
+        <p>&copy; 2019 First Project WCS, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+
+    </footer>
 
  </body>
 </html>
